# aoc

./: Cargo.toml  README.md  test.rs
src/: day1-1.rs  day1-2.rs  day2-1.rs  day2-2.rs  day3-1.rs  day3-2.rs  day4-1.rs  day4-2.rs  day5-1.rs  day6-1.rs  day7-1.rs  day7-2.rs
