[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1-1"
path = "src/day1-1.rs"

[[bin]]
name = "day1-2"
path = "src/day1-2.rs"

[[bin]]
name = "day2-1"
path = "src/day2-1.rs"

[[bin]]
name = "day2-2"
path = "src/day2-2.rs"

[[bin]]
name = "day3-1"
path = "src/day3-1.rs"

[[bin]]
name = "day3-2"
path = "src/day3-2.rs"
